fix: spacing in header of popup

--- a/JobFairApplication/src/app/back-office/skill-popup/skill-popup.page.scss
+++ b/JobFairApplication/src/app/back-office/skill-popup/skill-popup.page.scss
@@ -6,6 +6,12 @@ ion-title{
 .header{
     display: flex;
     justify-content: space-between;
+
+    &-title {
+        ion-title {
+            padding: 0 20px;
+        }
+    }
 }
 
 .addVenue{
