--- a/JobFairApplication/src/app/back-office/venue-popup/venue-popup.page.scss
+++ b/JobFairApplication/src/app/back-office/venue-popup/venue-popup.page.scss
@@ -5,6 +5,12 @@ ion-title{
 .header{
     display: flex;
     justify-content: space-between;
+
+    &-title {
+        ion-title {
+            padding: 0 20px;
+        }
+    }
 }
 .addVenue{
     margin-top:10px;
